AVRO-4123: Do not use List.getFirst() yet